--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "moment": "^2.30.1",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.5",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
