--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-input-emoji": "^5.6.5",
     "react-router-dom": "^6.21.3"
   },
